--- a/res/layout/red_item.xml
+++ b/res/layout/red_item.xml
@@ -3,19 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TodoListManagerActivity"
-	android:orientation="vertical">
+	android:orientation="horizontal">
     
-    	<TextView	    android:id="@+id/lstTodoItem"
-    	android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#FF0000"
-        android:textStyle="bold"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textSize="20sp"
-        android:longClickable="true"
+    	<TextView
+		    android:id="@+id/txtTodoTitle"
+	    	android:layout_width="0dp"
+	    	android:layout_weight="1"
+	        android:layout_height="wrap_content"
+	        android:textColor="#ff0000"
+	        android:paddingBottom="10dp"
+	        android:paddingTop="10dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:textSize="20sp"
+	        android:longClickable="true"
     	/>
+    	
+    	<TextView
+		    android:id="@+id/txtTodoDueDate"
+	    	android:layout_width="0dp"
+	    	android:layout_weight="1"
+	        android:layout_height="wrap_content"
+	        android:textColor="#ff0000"
+	        android:paddingBottom="10dp"
+	        android:paddingTop="10dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:textSize="20sp"
+	        android:longClickable="true"
+    	/>
+
 
 </LinearLayout>
